--- a/trunk/css/bootstrap.css
+++ b/trunk/css/bootstrap.css
@@ -5011,6 +5011,7 @@ a.list-group-item-danger.active:focus {
   border-bottom: 1px solid transparent;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
+  padding-left: 0px !important;
 }
 .panel-heading > .dropdown .dropdown-toggle {
   color: inherit;
