--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -201,3 +201,14 @@ code {
   font-size: 11px;
 color: red;
 }
+
+.footernavega a{
+  text-decoration: none;
+  color: #C4C4C4 !important;
+
+}
+.footernavega a:hover{
+  text-decoration: none;
+  color: #C4C4C4 !important;
+
+}
