--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,8 @@ body
 
 #mainmenu
 {
-	background:white url(bg.gif) repeat-x left top;
+	background: #31749A;
+	height: 50px;
 }
 
 #mainmenu ul
@@ -61,6 +62,7 @@ body
 #mainmenu ul li
 {
 	display: inline;
+	line-height: 20px;
 }
 
 #mainmenu ul li a
@@ -75,9 +77,9 @@ body
 
 #mainmenu ul li a:hover, #mainmenu ul li.active a
 {
-	color: #6399cd;
-	background-color:#EFF4FA;
-	text-decoration:none;
+	color: white;
+/*	background-color:#EFF4FA;*/
+	text-decoration:underline;
 }
 
 div.flash-error, div.flash-notice, div.flash-success
